--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.hiden{
+    display: none;
+}
 :root {
     --items: 4;
     --row-gap: 48px;
@@ -55,16 +58,45 @@ img {
 }
 
 .section {
+    padding-top:72px;
+    padding-bottom:72px;
+}
+@media screen and (min-width:768px){
+    .section {
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+} 
+@media screen and (min-width:1158px){
+.section {
     padding-top: 188px;
-    padding-bottom: 188px;
+    padding-bottom: 188px;}
 }
-
 .container {
+    /* phone-devices */
+    min-width: 320px; 
+    padding: 0 16px;
     margin: 0 auto;
-    padding: 0 15px;
-    max-width: 1158px;
-}
 
+    /* outline: 2px solid red;
+    outline-offset: -2px; */
+}
+/* tablet-devices */
+@media screen and (min-width:768px) {
+    .container{
+        max-width: 768px;
+        
+    }
+    
+}
+/* desctop */
+@media screen and ( min-width:1158px) {
+    .container{
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+    
+}
 .info {
     position: fixed;
     left: 0px;
@@ -74,11 +106,11 @@ img {
     width: 100%;
 }
 
-/* header */
+/* ==============header ================================================== */
 .header {
     position: sticky;
     top: -1;
-    background: var(--WHITE, #FFF);
+    background: #FFF;
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -92,6 +124,7 @@ img {
     align-items: center;
     flex-shrink: 0;
     height: 72px;
+    margin: 0 a;
 }
 
 .header-nav {
@@ -103,24 +136,80 @@ img {
 .nav-list {
     display: flex;
     gap: 40px;
+    
 }
+@media screen and (max-width:767.98px) {
+    .nav-list{
+        display: none;
+    }
+    .contacts-list{
+        display: none;
+    }
+    .menu-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        background-color: transparent;
+        /* cursor: pointer; */
+    }
+    
+}
+@media screen and (min-width:768px){
+    /* .nav-list{
 
+    } */
+    .contacts-list {
+        /* display: flex; */
+        gap: 40px;
+        font-style: normal;
+    }
+    .menu-btn,
+    .menu-btn-icon{
+        display: none;
+    }
+    .address-link{
+        color: var(--SLATE, #434455);
+        font-family: Roboto;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 14px;
+        letter-spacing: 0.48px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .nav-list-link{
+        color: var(--NAVY-BLUE, #2E2F42);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.32px;
+    }
+}
+@media screen and (min-width:1158px){
+    .address-link{
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #434455;
+        letter-spacing: 0.02em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    } 
+    .contacts-list {
+        display: flex;
+}
 .nav-list-link {
     display: block;
     position: relative;
-
     font-size: 16px;
     font-weight: 500;
     color: #2e2f42;
     line-height: 1.5;
     letter-spacing: 0.02em;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     padding: 24px 0;
 }
-
-/*main */
 .nav-list-link:hover,
 .nav-list-link:focus {
     color: #404bbf;
@@ -143,26 +232,25 @@ img {
     width: 100%;
 }
 
-/* contacts */
-.contacts-list {
-    display: flex;
-    gap: 40px;
+    
+   
 
-    font-style: normal;
 }
+/* ===============contacts ===================================================== */
 
-.address-link,
+
+
+
+/* .address-link, */
 .contacts-list {
-
-
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     color: #434455;
     letter-spacing: 0.02em;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .address-link:hover,
 .address-link:focus,
@@ -170,7 +258,7 @@ img {
 .contacts-list:focus {
     color: #404bbf;
 }
-
+/* ====hero==================================================================================== */
 .hero {
     margin: 0 auto;
     background-image:
@@ -183,21 +271,23 @@ img {
     max-width: 1440px;
 }
 
+    
 .hero-header {
-    color: var(--WHITE, #FFF);
+    color:  #FFF;
     text-align: center;
-
     font-family: Roboto;
-    font-size: 56px;
-    font-weight: 700;
+    font-size: 36px;
     font-style: normal;
+    font-weight: 700;
     line-height: 1.07;
     letter-spacing: 0.02em;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 48px;
-    max-width: 496px;
+    margin-bottom: 72px;
+    text-transform: capitalize;
+    max-width: 288px;
 }
+
 
 .hero-button {
     display: block;
@@ -214,7 +304,6 @@ img {
     border-radius: 4px;
     margin-right: auto;
     margin-left: auto;
-
     transition:
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -223,31 +312,79 @@ img {
 .hero-button:focus {
     background-color: #404BBF;
 }
-
+/* ====== benefits===================================================================================== */
 .benefits {
-    padding-top: 120px;
-    padding-bottom: 120px;
-    
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .benefits-items {
     display: flex;
-    gap: 24px;
+    width: 100%;
+    flex-wrap: wrap;
+    gap:72px 24px;
 }
-
-
 .benefits-icon-box {
-    display: flex;
+    display: none;
+    visibility: hidden;
+    /* display: flex;
     justify-content: center;
     align-items: center;
-
     height: 112px;
     border-radius: 4px;
     border: 1px solid var(--LIGHT-SLATE, #8E8F99);
     background: var(--CLOUD, #F4F4FD);
-    margin-bottom: 8px;
+    margin-bottom: 8px; */
 
 }
+@media only screen and (max-width: 767.988px) {
+    .benefits-items {
+        --items: 1;
+        justify-content: center;
+    }
+    .benefits-icon-box {
+        display: none;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .benefits-items {
+        --items: 2;
+    }
+    .benefits-item {
+        width: calc((100% - var(--column-gap) * (var(--items) - 1)) / var(--items));
+    }
+    
+
+}
+
+@media only screen and (min-width: 1158px){
+    .benefits {
+            padding-top: 120px;
+            padding-bottom: 120px;
+        }
+    .benefits-item {
+        width: calc((100% - 72px) / 4);
+    }
+    .benefits-icon-box {
+        visibility: visible;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 112px;
+        border-radius: 4px;
+        border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+        background: var(--CLOUD, #F4F4FD);
+        margin-bottom: 8px;
+    }
+    .benefits-item-header{
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0.4px;
+       
+    }
+}
+
 
 .benefits-icon {
     width: 64px;
@@ -255,6 +392,41 @@ img {
     box-sizing: border-box;
 }
 
+
+.benefits-item-header {
+    margin-bottom: 8px;
+    text-align: center; 
+    color: var(--NAVY-BLUE, #2E2F42);
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    
+}
+@media only screen and (min-width: 768px) {
+    .benefits-item-header {
+        text-align: left;
+    }
+
+    .benefits-item-text {
+        color: var(--NAVY-BLUE, #2e2f42);
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+    }
+}
+
+.benefits-item-text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
 .social-links {
     display: flex;
     flex-shrink: 0;
@@ -318,29 +490,23 @@ img {
 }
 
 
-.benefits-item {
-    width: calc((100% - 72px) / 4);
-}
-
-.benefits-item-header {
-    margin-bottom: 8px;
-
-}
-
-.benefits-item-text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
 
 
 
+/* =======our team=========================================================== */
 .team {
+   
     background-color: #F4F4FD;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+   
+}
+@media screen and( min-width:1158px) {
+    .team{
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    
 }
 
 .team-header {
@@ -353,22 +519,41 @@ img {
     text-transform: capitalize;
     margin-bottom: 72px;
 }
-
 .team-items {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* gap: 24px; */
+    column-gap: 24px;
+    row-gap: 64px;
 }
+/* .team-items {
+    min-width: 320px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 72px;
+    /* row-gap: 24px; */
 
+@media screen and (min-width:768px) {
+    .team-items{
+        max-width: 768px;
+    }
+    
+}
+@media screen and (min-width:1158px){
+    .team-items{
+        max-width: 1158px;
+    }
+} 
 .team-item {
     box-shadow:
         0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-
     background-color: #FFFFFF;
-
     border-radius: 0px 0px 4px 4px;
-
+    
 }
 
 .team-item-info {
@@ -378,7 +563,6 @@ img {
 
 .team-item-header {
     margin-bottom: 8px;
-
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -387,18 +571,24 @@ img {
 }
 
 .team-item-text {
-
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
-
+/* ======= portfolio=============================================================== */
 .portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
+@media screen and(min-width:1158px) {
+    .portfolio {
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
 
+}
 
 .portfolio-header {
     font-size: 36px;
@@ -414,19 +604,35 @@ img {
 }
 
 .portfolio-items {
-    --items: 3;
+    --items: 1;
     display: flex;
     flex-wrap: wrap;
-    gap: 48px 24px;
-    
     row-gap: 48px;
+    justify-content: center;
 }
 
 .portfolio-item {
-    width: calc((100% - var(--column-gap) * (var(--items) - 1)) / var(--items));
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+@media only screen and (min-width: 768px) {
+    .portfolio-items{
+        --items: 2;
+        gap: 72px 24px;
+    }
+    .portfolio-item{
+        width: calc((100% - var(--column-gap) * (var(--items) - 1)) / var(--items));
+    }
+}
+@media only screen and (min-width: 1158px) {
+    .portfolio-items {
+        --items: 3;
+        gap: 48px 24px;
+        row-gap: 48px;
+    }
+    /* .portfolio-item {
+        width: calc((100% - var(--column-gap) * (var(--items) - 1)) / var(--items));
+    } */
+}
 .portfolio-item:hover {
 
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -486,25 +692,52 @@ img {
     letter-spacing: 0.02em;
 }
 
-
+/* ====footer============================================================================= */
 
 .footer {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 96px 0;
     background-color: #2e2f42;
 }
+@media only screen and (max-width: 767.98px){
+    .footer{
+        text-align: center;
+    }
+}
 
-.footer-container {
-    display: flex;
-    align-items: baseline;
+@media screen and (min-width:768px) and (max-width:1157.98px) {
+    .footer-container{
+        padding: 0 108px;
+       
+    }
+}
+@media only screen and (min-width: 768px) {
+    .footer-container{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+  }
+    .footer-text {
+        max-width: 264px;}
+}
+@media screen and (min-width:1158px) {
+    .footer-container{
+        align-items: baseline;
+    }
+    .footer-logo-box{
+        margin-right: 120px;
+    }
+    .footer-form{
+        margin-left: auto;
+    }
 }
 
 .footer-logo-box {
-    margin-right: 120px
+    margin-bottom :72px; ;
+    
 }
 
 .footer-logo-link {
-    display: inline-block;
+    display: block;
     margin-bottom: 16px;
 }
 
@@ -513,7 +746,7 @@ img {
 }
 
 .footer-text {
-    max-width: 264px;
+    width: 288px;
     color: var(--CLOUD, #F4F4FD);
 
     font-family: Roboto;
@@ -521,6 +754,7 @@ img {
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.32px;
+    text-align: left;
 }
 
 text {
@@ -532,8 +766,18 @@ text {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+.footer-form-cap{
+    color:  #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.15;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+}
 
-
+.social-media{
+    margin-bottom: 72px;
+}
 .social-media-header {
     color: var(--WHITE, #FFF);
 
@@ -560,9 +804,17 @@ text {
 }
 
 .header-logo {
-    margin-right: 76px;
+    
+    margin-right: 120px;
+   
 }
-/* modal-window */
+@media screen and (min-width:1158px){
+    .header-logo{
+        margin-right: 76px;
+    }
+    
+}
+/* =======modal-window ======================================*/
 .backdrop{
     background-color: rgba(46, 47, 66, 0.40);
     position: fixed;
@@ -575,6 +827,7 @@ text {
     justify-content: center ;
     transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
                visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* ========= */
     /* opacity: 0;
     visibility: hidden;
     pointer-events: none; */
@@ -584,8 +837,8 @@ text {
     top: 50%;
     left: 50%;
     transform: translate(-50% ,-50%);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     flex-shrink: 0;
     border-radius: 4px;
     background: #FCFCFC;  
@@ -594,6 +847,12 @@ text {
         0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) {
+   .modal{
+    width: 408px;
+    min-height: 584px;
+  }
 }
 .backdrop.is-open{
     opacity:1;
@@ -712,14 +971,11 @@ text {
 }
 .form-user-comment::placeholder{
     color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
-    
-        /* Small Text */
         font-family: Roboto;
         font-size: 12px;
         font-style: normal;
         font-weight: 400;
         line-height: 14px;
-        /* 116.667% */
         letter-spacing: 0.48px;
 }
 .checkbox-lable{
@@ -729,7 +985,6 @@ text {
         font-style: normal;
         font-weight: 400;
         line-height: 14px;
-        /* 116.667% */
         letter-spacing: 0.48px;
 }
 
@@ -763,11 +1018,21 @@ text {
 /*============== footer-form ==================================================== */
 .form-subscribe{
     display: flex;
-    gap:24px;
-    align-items: center;
+    flex-wrap: wrap;
+    gap:16px 24px;
+    justify-content: center;
+   
+}
+.subscribe-form-field{
+    width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .subscribe-form-field{
+    max-width: 264px; 
+  }
 }
 .footer-form{
-    margin-left: auto;
+    
     align-items: center;
    
     
@@ -783,6 +1048,7 @@ text {
     margin-bottom: 16px;
 }
 .subscribe-form-btn{
+    
     display: inline-flex;
     padding: 8px 24px;
     justify-content: center;
@@ -860,4 +1126,75 @@ input[type="checkbox"]:checked+label>span {
 }
 .checkbox-link{
     color: #4d5ae5;
+}
+/* ====mobale-menu=============================================== */
+.mobale-menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    padding: 72px 24px 40px 16px ;
+    display: flex;
+    flex-direction: column;
+    transform: translateX(-100%);
+    visibility: hidden;
+    transition:transform 250ms ease,visibility 250ms ease;
+}
+.mobale-menu.is-open{
+    transform: translateX(0);
+    visibility: visible;
+}
+.mob-menu-btn{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #E7E9FC ;
+    border-radius: 50%;
+    width:24px ;
+    height:24px ;
+    background-color: transparent;
+}
+.mobale-menu-list{
+    margin-bottom: auto;
+}
+.mobale-menu-item:not(:last-child){
+    margin-bottom: 40px;
+    
+}
+.mobale-menu-link{
+    color: #2E2F42;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+.mobale-menu-link.current{
+    color: #404BBF;
+}
+.mobale-menu-contacts-list{
+    margin-bottom: 48px;
+}
+.mobale-menu-contacts-link{
+    color: #434455;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+}
+.mobale-menu-contacts-link.accent{
+    color: #4D5AE5;
+}
+.mobale-menu-contacts-item:not(:last-child){
+    margin-bottom: 24px;
+}
+.mobale-menu-social-links{
+    gap:40px
+
 }
